fix time element issue on small screens

--- a/habit-tracker/C11/MalkhutHB/styles/habit-cards.css
+++ b/habit-tracker/C11/MalkhutHB/styles/habit-cards.css
@@ -246,7 +246,6 @@
     display: flex;
     align-items: center;
     flex-direction: row;
-    width: 43.125rem;
     justify-content: space-between;
 }
 
@@ -254,7 +253,6 @@
     margin: 0.9375rem 0rem;
     height: 3.3125rem;
     width: 12.5rem;
-    padding-left: 0.625rem;
     background-color: #a4c6dd39;
     border-radius: 2.5rem;
     border-style: none;
